--- a/_config.yml
+++ b/_config.yml
@@ -1,32 +1,29 @@
 # Site Data
-title: "Enjoyment Work"
-tagline: " — a Digital Garden 🌱"
-name: "Brennan Kenneth Brown"
+title: "Ruff Management"
+tagline: " — Investor Relations"
+name: "Ruff Management Inc."
 author_bio:
-  "Hey there! My name is Brennan, I'm a 24-year-old Métis web developer and content strategist from Winnipeg,
-  Manitoba and currently reside in Calgary, Alberta. I've recently compeleted a Full Stack Developer Program
-  at EvolveU, and I'm looking to help those that need web development work done, or searching for ideas and
-  management for their next content project."
-description: "A Digital Garden: Capturing my daily thoughts and progress, as well as curated ideas with unique synthesis—a personal zettelkasten."
+  "We are Ruff Management Inc., an organization passionate about agile development and efficient utilization of time."
+description: "Ruff Management Inc. is a management company which manages other firms and raises equity."
 footer_description:
   'The phrase "digital garden" is a metaphor for thinking about writing and creating that focuses less on the
   resulting "showpiece" and more on the process, care, and craft it takes to get there. While not everybody
   has or works in a dirt garden, we all share a familiarity with the idea of what a garden is.'
-notes_url: "https://enjoyment-work.netlify.app"
-profile_pic: "https://brennanbrown.ca/img/avatar.jpg"
-favicon: /assets/img/favicon.png
+notes_url: "https://ir.ruff-manage.com"
+profile_pic: "https://blazed.sirv.com/ruff-manage.com/ruff-lion.png"
+favicon: https://blazed.sirv.com/ruff-manage.com/ruff-lion.png?w=64&h=64
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "https://enjoyment-work.netlify.app/" # the base hostname & protocol for your site, e.g. https://example.com
+url: "https://ir.ruff-manage.com/" # the base hostname & protocol for your site, e.g. https://example.com
 theme_color: white
 encoding: utf-8
 
 # Links and Social Media
-donate_link: https://ko-fi.com/brennanbrown
-repository: https://github.com/brennanbrown/enjoyment-work
-github: https://github.com/brennanbrown
-twitter: https://twitter.com/brennankbrown
-portfolio: https://brennanbrown.ca
-email: mail@brennanbrown.ca
+donate_link: https://opencollective.com/blazed-dev
+repository: https://github.com/ruff-org/investor
+github: https://github.com/ruff-org
+twitter: https://twitter.com/RuffManage
+portfolio: https://blz.one/products/
+email: hello@ruff-manage.com
 
 # Build Settings
 theme: null
