--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ donate_link: https://opencollective.com/ruff-management-inc
 repository: https://github.com/ruff-org/investor
 github: https://github.com/ruff-org
 twitter: https://twitter.com/RuffManage
-portfolio: https://blz.one/products/
+portfolio: https://ruff-manage.com/
 email: hello@ruff-manage.com
 
 # Build Settings
